@@ -1,5 +1,13 @@
 2005-03-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
+	* lib/rel.c :
+	* lib/rel.h :
+
+	  - Changed order of relation macros.
+
+	  - Simplified inverse().
+
+
 	* VERSION :
 	* configure.ac :
 
